--- a/blog/_article.pug
+++ b/blog/_article.pug
@@ -51,7 +51,7 @@ html(lang="en")
                                     | #{metadata.tag}
                                 .point
                                 .time-to-read 
-                                    | #{metadata.timeToRead} min read
+                                    | #{metadata.timeToRead} read
                             h1.post-title
                                 | #{metadata.title}
                             .post-date
