--- a/blog/style.sass
+++ b/blog/style.sass
@@ -274,6 +274,8 @@ section
     display: flex
     padding: 4px 12px
     border-radius: 8px
+    text-transform: capitalize
+    background-color: #fd84e3
 
 .point
     width: 4px
@@ -297,6 +299,21 @@ section
 
 #Education
     background-color: #FDBF1E
+
+#binance
+    background-color: #FDBF1E
+
+#near
+    background-color: #95A7E8
+
+#wallet
+    background-color: #85D3C9
+
+#tutorial
+    background-color: #fd84e3
+
+#news
+    background-color: #85D3C9
 
 .post
     max-width: 704px
@@ -362,6 +379,7 @@ section
         font-style: normal
         font-weight: 500
         line-height: 28px
+        color: #fd84e3
 
     blockquote
         position: relative
