fix links and padding

--- a/blog/style.sass
+++ b/blog/style.sass
@@ -317,11 +317,9 @@ section
 
 .post
     max-width: 704px
-    margin-left: 140px
+    margin-left: 180px
     @media (max-width: 900px)
         margin-left: 0
-    // @media (max-width: 1000px)
-    //     padding: 0 16px
     &-content
         padding-top: 32px
 
@@ -379,7 +377,8 @@ section
         font-style: normal
         font-weight: 500
         line-height: 28px
-        color: #fd84e3
+        color: #2C3034
+        text-decoration-line: underline
 
     blockquote
         position: relative
