--- a/blog/style.sass
+++ b/blog/style.sass
@@ -409,3 +409,56 @@ section
                 bottom: 0
                 left: 50%
                 transform: translate(-50%, 0)
+
+.subscribe-email-form
+    display: flex
+    width: 704px
+    padding: 64px
+    flex-direction: column
+    align-items: center
+    gap: 48px
+    border-radius: 16px
+    border: 1px solid #C7BAB8
+    background: #FDBF1E
+    .title
+        padding-bottom: 0
+        font-family: Cabinet Grotesk
+        font-size: 40px
+        font-style: normal
+        font-weight: 900
+        line-height: normal
+        text-align: center
+    .form-box
+        display: flex
+        flex-direction: row
+        width: 100%
+        justify-content: center
+        gap: 16px
+        input
+            border-radius: 16px
+            border: 1px solid #2C3034
+            background: #EBDEDC
+            width: 343px
+            height: 56px
+            flex-shrink: 0
+            color: #6B6661
+            font-family: Manrope
+            font-size: 16px
+            font-style: normal
+            font-weight: 500
+            line-height: normal
+            padding: 0 16px
+        button
+            display: flex
+            width: 200px
+            height: 56px
+            justify-content: center
+            align-items: center
+            border-radius: 24px
+            background: #2C3034
+            font-family: Manrope
+            font-size: 16px
+            font-style: normal
+            font-weight: 600
+            line-height: normal
+            color: #FFF
