--- a/blog/_article.pug
+++ b/blog/_article.pug
@@ -67,10 +67,20 @@ html(lang="en")
                             .subscribe-email-form
                                 p.title 
                                     | Subscribe to get useful tutorials and updates!
-                                .form-box 
-                                    input(placeholder="Email" name="Email")
-                                    button
+                                form.form-box
+                                    input(placeholder="Email" name="Email").email-form-input
+                                    button(type="Submit").email-form-button
                                         | Subscribe
+                                p.form-error
+            
+            .modal-wrap
+                .modal-body
+                    button.modal-close
+                        img(src="/assets/icons/close.svg")
 
+                    img(src="../assets/Graphics/success.png", height="148px")
+                    p 
+                        | We will notify you about our NEWS
             include ../landing/footer/index.pug
             script(type="module", src="./index.js")
+            script(type="module", src="./scripts/emailForm.js")
