--- a/blog/index.pug
+++ b/blog/index.pug
@@ -78,3 +78,4 @@ html(lang="en")
 
 			include ../landing/footer/index.pug
 			script(type="module", src="./index.js")
+			script(type="module", src="./scripts/emailForm.js")
