--- a/blog/style.sass
+++ b/blog/style.sass
@@ -412,16 +412,18 @@ section
 
 .subscribe-email-form
     display: flex
-    width: 704px
+    width: 100%
     padding: 64px
+    padding-bottom: 50px
     flex-direction: column
     align-items: center
-    gap: 48px
     border-radius: 16px
     border: 1px solid #C7BAB8
     background: #FDBF1E
+    @media (max-width: 560px)
+        padding: 64px 32px
     .title
-        padding-bottom: 0
+        padding-bottom: 48px
         font-family: Cabinet Grotesk
         font-size: 40px
         font-style: normal
@@ -434,20 +436,24 @@ section
         width: 100%
         justify-content: center
         gap: 16px
+        @media (max-width: 660px)
+            flex-direction: column
         input
             border-radius: 16px
             border: 1px solid #2C3034
             background: #EBDEDC
-            width: 343px
             height: 56px
+            width: 343px
             flex-shrink: 0
-            color: #6B6661
+            color: #2C3034
             font-family: Manrope
             font-size: 16px
             font-style: normal
             font-weight: 500
             line-height: normal
             padding: 0 16px
+            @media (max-width: 660px)
+                width: 100%
         button
             display: flex
             width: 200px
@@ -462,3 +468,109 @@ section
             font-weight: 600
             line-height: normal
             color: #FFF
+            @media (max-width: 660px)
+                width: 100%
+    .form-error
+        text-align: start
+        width: 100%
+        color: #d63e3e
+        margin: 0
+        padding: 6px 0 0 24px
+        font-size: 14px
+        height: 14px
+
+@keyframes anvil
+    0%
+        transform: scale(1) translateY(-50%) translateX(-50%)
+        box-shadow: 0 0 0 rgba(241, 241, 241, 0)
+        opacity: 0
+
+    1%
+        transform: scale(0.96) translateY(-60%) translateX(-50%)
+        box-shadow: 0 0 0 rgba(241, 241, 241, 0)
+        opacity: 0
+
+    100%
+        transform: scale(1) translateY(-50%) translateX(-50%)
+        box-shadow: 0 0 500px rgba(241, 241, 241, 0)
+        opacity: 1
+
+@keyframes show
+    0%
+        background: rgba(0, 0, 0, 0)
+
+    100%
+        background: rgba(0, 0, 0, 0.6)
+
+.modal-wrap
+    animation: show 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards
+    display: none
+    align-items: center
+    justify-content: center
+    position: fixed
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    z-index: 30005
+    padding: 16px
+    &.open
+        display: flex
+
+.modal-close
+    position: absolute
+    top: 16px
+    right: 16px
+    width: 24px
+    height: 24px
+    display: flex
+    align-items: center
+    justify-content: center
+    background: transparent
+    border: none
+    cursor: pointer
+    transition: 0.2s opacity
+    &:hover
+        opacity: 0.5
+
+.modal-body
+    top: 50%
+    left: 50%
+    position: relative
+    background: #F3EBEA
+    border-radius: 16px
+    padding: 32px
+    width: 480px
+    animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards
+    @media (max-width: 560px)
+        width: 100%
+
+    h2
+        font-weight: 900
+        font-size: 32px
+        line-height: 40px
+        text-align: center
+        font-feature-settings: 'liga' off
+        color: #2C3034
+        margin: 0 0 8px 0
+
+    p
+        margin: 0 0 32px 0
+        font-weight: 600
+        font-size: 18px
+        line-height: 25px
+        text-align: center
+        color: #6B6661
+
+#success-modal
+    .modal-body
+        height: 314px
+        justify-content: center
+
+    p
+        font-weight: 600
+        font-size: 18px
+        line-height: 25px
+        text-align: center
+        color: #2C3034
+        margin-top: 32px
