--- a/landing/index.pug
+++ b/landing/index.pug
@@ -24,7 +24,8 @@ html(lang="en")
 
         // Google tag (gtag.js)
         script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-J76SQ67RJB')
-
+        script(async='' src='https://automatic.chat/embed.js', id="cllk1g0y500hcmc1ggtgfhd5r")
+        
         script.
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
