mint page connect

--- a/mint/index.pug
+++ b/mint/index.pug
@@ -52,7 +52,7 @@ html(lang="en")
               h3.item-value.green $1,000
             .mint-status-item.time
               p.item-title Time to mint
-              h3.item-value 00:02:02:01
+              h3.item-value#time-to-mint 00:02:02:01
             .mint-status-item
               p.item-title Total minted
               h3.item-value 0
