--- a/mint/index.sass
+++ b/mint/index.sass
@@ -164,6 +164,10 @@
   font-weight: 600
   line-height: normal
   padding: 13px 49px
+  transition: 0.2s transform, 0.2s box-shadow
+  &:active
+    transform: translate(4px, 4px)
+    box-shadow: 0 0 #f3e6e9
 
 .mint-button-more
   font-family: Inter
@@ -271,6 +275,7 @@
 
 .nft-items
   padding-top: 140px
+  padding-bottom: 200px
   display: flex
   flex-direction: row
   justify-content: space-between
