--- a/mint/modal/index.sass
+++ b/mint/modal/index.sass
@@ -58,6 +58,7 @@
   top: 50%
   left: 50%
   position: relative
+  box-sizing: border-box
   background: #F3EBEA
   border-radius: 16px
   width: 800px
@@ -118,6 +119,11 @@
   padding-top: 29px
   display: flex
   justify-content: space-between
-  .img-near
-    position: relative
-    bottom: -4px
+  align-items: flex-end
+
+.modal-qr-wrap
+  border-radius: 16px
+  border: 1px solid var(--black-primary, #2C3034)
+  background: var(--elevation-1, #EBDEDC)
+  box-shadow: 8px 8px 0px 0px #2C3034
+  padding: 16px
