--- a/mint/index.pug
+++ b/mint/index.pug
@@ -58,7 +58,7 @@ html(lang="en")
               h3.item-value 0
           .mint-buttons
             button.mint-button-connect Connect wallet
-            button.mint-button-more Learn more
+            a.mint-button-more(href="/blog") Learn more
           .mint-connect
             .mint-connect-items
               .connect-item
