--- a/mint/index.sass
+++ b/mint/index.sass
@@ -171,6 +171,7 @@
 
 .mint-button-more
   font-family: Inter
+  text-decoration: none
   cursor: pointer
   border-radius: 16px
   border: 1px solid #F3EBEA
