--- a/mint/index.pug
+++ b/mint/index.pug
@@ -59,6 +59,17 @@ html(lang="en")
           .mint-buttons
             button.mint-button-connect Connect wallet
             button.mint-button-more Learn more
+          .mint-status.mobile
+            .prizes-and-total
+              .mint-status-item.prizes
+                p.item-title Available in prizes
+                h3.item-value.green $1,000
+              .mint-status-item.total
+                p.item-title Total minted
+                h3.item-value 0
+            .mint-status-item.time
+              p.item-title Time to mint
+              h3.item-value 00:02:02:01
           .mint-connect
             .mint-connect-items
               .connect-item
