--- a/mint/modal/index.pug
+++ b/mint/modal/index.pug
@@ -15,7 +15,7 @@
           .modal-qr
             .modal-qr-wrap
         .modal-footer
-          img.img-near(src="../assets/mint/modal-near.svg")
+          img.img-near(src="../assets/mint/modal-near.svg").hands
 
           .wrap(style="display: flex; gap: 8px; margin-bottom: 32px")
             a(href="https://download.herewallet.app?ios")
@@ -23,4 +23,4 @@
             a(href="https://download.herewallet.app?android")
               img(src="../assets/mint/googleplay.svg")
 
-          img(src="../assets/mint/modal-rock.svg")
+          img(src="../assets/mint/modal-rock.svg").hands
