done fix mobile

--- a/mint/index.pug
+++ b/mint/index.pug
@@ -115,8 +115,8 @@ html(lang="en")
                 img(src="../assets/mint/nft-light.svg").nft-item-light
                 img(src="../assets/mint/nft-case.svg").nft-item-case
               .nft-item-text
-                p.title 500 USDT
-                p.subtitle (1000 chests)
+                p.title 1000 USDT
+                p.subtitle (0.5 - 100 USDT, inside 1000 NFTs)
             .nft-item
               .nft-small-images
                 .container
@@ -130,7 +130,7 @@ html(lang="en")
                 img(src="../assets/mint/nft-case.svg").nft-item-case
               .nft-item-text
                 p.title 5 HERE NFT
-                p.subtitle (Floor $50, 5 chests)
+                p.subtitle (floor: 30 NEAR, inside 5 NFTs)
             .nft-item
               .nft-small-images
                 .container
@@ -142,7 +142,7 @@ html(lang="en")
                 img(src="../assets/mint/nft-case.svg").nft-item-case
               .nft-item-text
                 p.title +150 SCORE
-                p.subtitle (2000 chests)
+                p.subtitle (inside 2000 NFTs)
             .nft-item
               .nft-small-images
                   .container
@@ -152,7 +152,7 @@ html(lang="en")
                 img(src="../assets/mint/nft-case.svg").nft-item-case
               .nft-item-text
                 p.title 1 Mutation
-                p.subtitle (Price: 99$, 1 chest)
+                p.subtitle (Price: 99 NEAR, inside 1 NFT)
         
         .page-background
         section.mint-timeline
