--- a/mint/index.sass
+++ b/mint/index.sass
@@ -95,8 +95,11 @@
     line-height: 86px
     letter-spacing: 1.44px
     text-transform: uppercase
+    @media (max-width: 700px)
+      font-size: 40px
   @media (max-width: 700px)
     font-size: 40px
+    padding-top: 15px
 
 .mint-text
   font-size: 18px
@@ -109,6 +112,7 @@
   @media (max-width: 700px)
     font-size: 14px
     padding: 0 35px
+    margin-top: 0
 
 .mint-status.mobile
   display: none
