--- a/mint/index.pug
+++ b/mint/index.pug
@@ -43,7 +43,7 @@ html(lang="en")
         section.mint-interlude
           .mint-line
             h1.mint-title
-              | #[strong STarbox] FREE MINT 
+              | <em>STarbox</em> FREE MINT 
             p.mint-text
               | Pick up your starbox NFT, 3500 of them holds the prizes. Mint is free via HERE Wallet
           .mint-status
@@ -62,8 +62,8 @@ html(lang="en")
           .mint-status.mobile
             .prizes-and-total
               .mint-status-item.prizes
-                p.item-title Available in prizes
-                h3.item-value.green $1,000
+                p.item-title Total available
+                h3.item-value.green 10 000
               .mint-status-item.total
                 p.item-title Total minted
                 h3.item-value 0
